[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/ui.theme" type="Theme" id=2]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -318.0
margin_right = 318.0
margin_bottom = 50.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenCounter" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 73.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="HBoxContainer/GenCounter"]
margin_top = 3.0
margin_right = 53.0
margin_bottom = 52.0
text = "Gen:"

[node name="Value" type="Label" parent="HBoxContainer/GenCounter"]
margin_left = 57.0
margin_top = 3.0
margin_right = 73.0
margin_bottom = 52.0
text = "0"

[node name="Separator" type="Label" parent="HBoxContainer"]
margin_left = 77.0
margin_top = 3.0
margin_right = 114.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="ButtonPlay" type="Button" parent="HBoxContainer"]
margin_left = 118.0
margin_right = 185.0
margin_bottom = 55.0
text = "Play"

[node name="ButtonNext" type="Button" parent="HBoxContainer"]
margin_left = 189.0
margin_right = 268.0
margin_bottom = 55.0
text = "Next"

[node name="Separator2" type="Label" parent="HBoxContainer"]
margin_left = 272.0
margin_top = 3.0
margin_right = 309.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Add" type="Button" parent="HBoxContainer"]
margin_left = 313.0
margin_right = 373.0
margin_bottom = 55.0
rect_min_size = Vector2( 60, 0 )
text = "+"

[node name="Both" type="Button" parent="HBoxContainer"]
self_modulate = Color( 0, 1, 0.156863, 1 )
margin_left = 377.0
margin_right = 438.0
margin_bottom = 55.0
rect_min_size = Vector2( 60, 0 )
text = "+/-"

[node name="Remove" type="Button" parent="HBoxContainer"]
margin_left = 442.0
margin_right = 502.0
margin_bottom = 55.0
rect_min_size = Vector2( 60, 0 )
text = "-"

[node name="Separator3" type="Label" parent="HBoxContainer"]
margin_left = 506.0
margin_top = 3.0
margin_right = 543.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="ButtonReset" type="Button" parent="HBoxContainer"]
margin_left = 547.0
margin_right = 636.0
margin_bottom = 55.0
text = "Reset"

[connection signal="pressed" from="HBoxContainer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="HBoxContainer/Both" to="." method="_on_Both_pressed"]
[connection signal="pressed" from="HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonReset" to="." method="_on_ButtonReset_pressed"]
